Fixed Horizontal Scrolling Issue

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,7 +1,6 @@
 /* General */
-body {
-    background-color: #F29D39;
-}
+
+
 
 h1 {
     color: white;
@@ -169,11 +168,11 @@ input:-webkit-autofill {
 }
 
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
-
+    max-width: 100%;
+    overflow-x: hidden;
+    background-color: #F29D39;
 }
 
 @media screen and (min-width: 2000px) and (max-width: 3000px) {
